# simple_template

./: CMakeLists.txt  README.md
src/: example_class.cc  example_class.h
